# bcra-connector

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEEME.md  README.md  bcra_connector.py  cheques.py  estadisticas_cambiarias.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
.agent/workflows/: lint-pr.md  open-pr.md  release.md  run-tests.md  security-scan.md  update-docs.md
.github/: AGENT_WORKFLOW.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yaml  docs.yaml  feature.yaml
.github/workflows/: test-and-publish.yaml
docs/: bcra_connector.md  requirements.txt
docs/source/: api_reference.rst  changelog.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  usage.rst
examples/: 01_get_principales_variables.py  02_get_datos_variable.py  03_get_latest_value.py  04_error_handling.py  05_connector_configuration.py  05_data_analysis.py  06_cheques_api.py  07_exchange_statistics.py  08_central_deudores.py
src/: bcra_connector.py  setup.py
src/bcra_connector/: __about__.py  __init__.py  _version.py  bcra_connector.py  rate_limiter.py  timeout_config.py
src/bcra_connector/central_deudores/: central_deudores.py
src/bcra_connector/cheques/: __init__.py  cheques.py
src/bcra_connector/estadisticas_cambiarias/: __init__.py  estadisticas_cambiarias.py
src/bcra_connector/principales_variables/: __init__.py  principales_variables.py
tests/: bcra_connector_tests.py  cheques_tests.py  conftest.py  estadisticas_cambiarias_tests.py  principales_variables_tests.py  rate_limiter_tests.py  test_rate_limiter.py  timeout_tests.py
tests/fixtures/: test_data.py
tests/integration/: test_api_integration.py  test_central_deudores_integration.py  test_error_handling.py
tests/unit/: test_bcra_connector.py  test_bcra_connector_deudores.py  test_bcra_connector_extended.py  test_rate_limiter.py  test_timeout_config.py
tests/unit/models/: test_central_deudores.py  test_cheques.py  test_dataframe_support.py  test_estadisticas_cambiarias.py  test_principales_variables.py
